<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/edittxt_bg"
            android:gravity="center|start"
            android:hint="@string/user_name"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittxt_bg"
            android:gravity="center|start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@+id/username" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/btn_bg"
            android:paddingLeft="@dimen/_50sdp"
            android:paddingRight="@dimen/_50sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/bg"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <View
            android:id="@+id/view"
            android:layout_width="0.5dp"
            android:layout_height="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />


        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
